# PlanMod

./: .gitignore  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  PLANFORM_BOUNDARY_IMPROVEMENTS.md  QUICKSTART.md  README.md  README_OCR.md  analyze_detections.py  analyze_differences.py  analyze_planform_boundaries.py  check_f2.py  check_f2_contrast.py  check_f2_low_confidence.py  check_left_detection.py  compare_results.py  detect_leaders.py  docker-compose.yml  find_red_squares.py  plan.md  progress.md  pyproject.toml  remove_text_leaders.py  remove_text_ocr.py  requirements.txt  test_detection.py  test_f2_isolated.py  thin_lines.py  trace_leaders_monochrome.py  visualize_text_detection.py
backend/: __init__.py
backend/api/: __init__.py  server.py
backend/component_db/: __init__.py  catalog.py  materials.py
backend/component_db/data/: balsa_stock.json  fasteners.json  hardware.json
backend/dxf_writer/: __init__.py  block_manager.py  handler.py  layer_manager.py  writer.py
backend/ingest/: __init__.py  dwg_processor.py  handler.py  normalizer.py  pdf_processor.py
backend/llm_client/: __init__.py  base.py  bedrock_claude.py  prompts.py
backend/ocr/: __init__.py  handler.py  text_processor.py  textract_client.py
backend/orchestration/: __init__.py  handler.py  report_generator.py  workflow_manager.py
backend/scene_graph/: __init__.py  graph_builder.py  handler.py  renderer.py  semantic_renderer.py
backend/shared/: __init__.py  config.py  cost_estimator.py  dynamo_client.py  models.py  s3_client.py
backend/transform/: __init__.py  geometry_modifier.py  handler.py  mass_calculator.py  substitution_engine.py
backend/vectorization/: __init__.py  arc_fitter.py  contour_tracer.py  handler.py  line_detector.py
backend/vision/: __init__.py  component_classifier.py  cv_detector.py  handler.py  hybrid_segmentation.py  plan_classification_rules.py  region_segmenter.py  vlm_guided_cv.py
backend/vlm_client/: __init__.py  base.py  bedrock_claude.py  prompts.py
docs/: IPAD_SEGMENTER_MIGRATION_PLAN.md  segmenter_refactoring_plan.md
examples/: basic_usage.py
frontend/: Dockerfile.dev  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: FileUpload.tsx  JobStatus.tsx  ResultsPanel.tsx  SceneGraphViewer.tsx  SubstitutionPanel.tsx
frontend/src/services/: api.ts
frontend/src/store/: jobStore.ts
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
infrastructure/cdk/: app.py  cdk.json
infrastructure/cdk/stacks/: __init__.py  api_stack.py  compute_stack.py  storage_stack.py
infrastructure/config/: aws_config.yaml
samples/: Aeronca defender.pmw  Corsair rivista.dwg  Corsair rivista.dxf
scripts/: generate_samples.py
src/: __init__.py
src/cli/: main.py
src/components/: __init__.py  database.py  replacement.py
src/export/: __init__.py  dxf_exporter.py
src/geometry/: __init__.py  mass_properties.py  projection.py
src/ingestion/: __init__.py  dxf_parser.py
src/scene/: __init__.py  scene_graph.py
src/vlm_client/: __init__.py  client.py  schema.py
tests/: __init__.py  analyze_against_reference.py  create_comparison.py  create_semantic_visualization.py  improved_classification.py  paint_components.py  test_component_database.py  test_dxf_local.py  test_mass_properties.py  test_pdf_local.py  test_scene_graph.py  test_vlm_classification.py  test_vlm_client.py  test_vlm_page2.py
tools/: interactive_segmenter.py  segmenter_config.py
tools/segmenter/: __init__.py  __main__.py  app.py  config.py  test_planform_view.py
tools/segmenter/core/: __init__.py  drawing.py  nesting.py  rendering.py  segmentation.py
tools/segmenter/dialogs/: __init__.py  attributes.py  label_scan.py  page_selection.py  pdf_loader.py  rectangle_selection.py  settings.py
tools/segmenter/io/: __init__.py  export.py  pdf_reader.py  workspace.py
tools/segmenter/models/: __init__.py  categories.py  elements.py  objects.py  page.py
tools/segmenter/utils/: __init__.py
tools/segmenter/widgets/: __init__.py  responsive_layout.py
tools/segmenter_ipad/: main.py  run.py
tools/segmenter_ipad/ui/: __init__.py
